infrastructure/security/gatekeeper/policies/constraints/disallow-latest.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatest
metadata:
  name: disallow-latest-image
spec:
  enforcementAction: deny

  match:
    kinds:
      - apiGroups:
          - apps
        kinds:
          - Deployment
