infrastructure/security/gatekeeper/policies/constraints/non-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNonRoot

metadata:
  name: require-non-root

spec:
  enforcementAction: deny

  match:
    excludedNamespaces:
      - argocd
      - kube-system
      - gatekeeper-system
      - istio-system
      - cert-manager
      - local-path-storage
      - cosign-system

    kinds:
      - apiGroups:
          - apps
        kinds:
          - Deployment
          
# For the K8sNonRoot policy, don't evaluate Deployments in these infrastructure namespaces.
